<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intelligenceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginTop="14dp"
            android:text="@string/label_intelligence"
            android:layout_marginEnd="8dp"/>

      <ProgressBar
          android:id="@+id/intelligenceProgressBar"
          style="?android:attr/progressBarStyleHorizontal"
          android:progress="50"
          android:layout_marginHorizontal="4dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/strengthTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="textEnd"
            android:text="@string/label_strength"
            android:layout_marginEnd="8dp"/>

        <ProgressBar
            android:id="@+id/strengthProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginHorizontal="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="textEnd"
            android:text="@string/label_speed"
            android:layout_marginEnd="8dp"/>

        <ProgressBar
            android:id="@+id/speedProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginHorizontal="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/durabilityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="textEnd"
            android:text="@string/label_durability"
            android:layout_marginEnd="8dp"/>

        <ProgressBar
            android:id="@+id/durabilityProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginHorizontal="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/powerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="textEnd"
            android:text="@string/label_power"
            android:layout_marginEnd="8dp"/>

        <ProgressBar
            android:id="@+id/powerProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginHorizontal="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/combatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="textEnd"
            android:text="@string/label_combat"
            android:layout_marginEnd="8dp"/>

        <ProgressBar
            android:id="@+id/combatProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>